Init login form admin

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,14 +17,26 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Flask Boilerplate</a>
+            <a class="navbar-brand" href="/">Flask Boilerplate</a>
             </div>
-
+            
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                {% if current_user.is_authenticated %}
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Login</a></li>
+                    <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        {{ current_user.username }} <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="{{ url_for('admin.logout_view') }}">Log out</a></li>
+                    </ul>
+                    </li>
                 </ul>
+                {% else %}
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="{{ url_for('admin.index') }}">Login</a></li>
+                </ul>
+                {% endif %}
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
@@ -38,6 +50,10 @@
             &copy; Flask boilerplate
         </p>
     </footer>
-</body>
 
+    <!-- Scripts  -->
+    <script type="text/javascript" src="{{ url_for('static', filename='node_modules/jquery/dist/jquery.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='node_modules/bootstrap/dist/js/bootstrap.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='node_modules/bootstrap/js/dropdown.js') }}"></script>
+</body>
 </html>
