--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -6,7 +6,7 @@
   <div class="container">
     <h1>Hello, world!</h1>
     <p>Flask boilerplate login</p>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">Login</a></p>
+    <p><a class="btn btn-primary btn-lg" href="{{ url_for('admin.index') }}" role="button">Login</a></p>
   </div>
 </div>
 
